--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl-PL">
 
 <head>
   <!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/13301dd31a8042b2a1f62ed2/script.js"></script> <!-- End cookieyes banner -->
