--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <title>Kabarday</title>
+  <meta name='description' content="Kabarday to ręcznie robione swety z naturalnych włóczek." />
+            <meta property="image" content="https://ytjymmciwsnouqxdavcc.supabase.co/storage/v1/object/public/kabarday/logo%20_link.png?t=2024-01-23T18%3A41%3A20.812Z"/>
+            <meta property="image:type" content="image/png" />
+            <meta property="image:width" content="240" />
+            <meta property="image:height" content="240" />
+            <meta property="image:alt" content="logo" />
 </head>
 
 <body>
