--- a/index.html
+++ b/index.html
@@ -5,32 +5,48 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
-        dataLayer.push(arguments);
+      dataLayer.push(arguments);
     }
     gtag("consent", "default", {
-        ad_storage: "denied",
-        ad_user_data: "denied", 
-        ad_personalization: "denied",
-        analytics_storage: "denied",
-        functionality_storage: "denied",
-        personalization_storage: "denied",
-        security_storage: "granted",
-        wait_for_update: 2000,
+      ad_storage: "denied",
+      ad_user_data: "denied",
+      ad_personalization: "denied",
+      analytics_storage: "denied",
+      functionality_storage: "denied",
+      personalization_storage: "denied",
+      security_storage: "granted",
+      wait_for_update: 2000,
     });
     gtag("set", "ads_data_redaction", true);
     gtag("set", "url_passthrough", true);
-</script>
+  </script>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDEE85ZQTV"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YDEE85ZQTV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-YDEE85ZQTV');
-</script>
-  <!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/13301dd31a8042b2a1f62ed2/script.js"></script> <!-- End cookieyes banner -->
+    gtag('config', 'G-YDEE85ZQTV');
+  </script>
+ 
+  <meta property="og:locale" content="pl_PL" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Ręcznie robione swetry" />
+  <meta property="og:description" content="Kabarday to ręcznie robione swety z naturalnych włóczek." />
+  <meta property="og:url" content="kabarday.com" />
+  <meta property="og:site_name" content="Kabarday" />
+  <meta property="og:image:type" content="image/jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <!-- <meta property="og:image:alt" content="Kabarday - strona główna" /> -->
+  <meta property="og:image" content="https://www.kabarday.com/logo2.jpg" />
+
+  <!-- Start cookieyes banner -->
+  <script id="cookieyes" type="text/javascript"
+    src="https://cdn-cookieyes.com/client_data/13301dd31a8042b2a1f62ed2/script.js"></script>
+  <!-- End cookieyes banner -->
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,12 +55,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <title>Kabarday</title>
-  <meta name='description' content="Kabarday to ręcznie robione swety z naturalnych włóczek." />
-            <meta property="image" content="https://ytjymmciwsnouqxdavcc.supabase.co/storage/v1/object/public/kabarday/logo%20_link.png?t=2024-01-23T18%3A41%3A20.812Z"/>
-            <meta property="image:type" content="image/png" />
-            <meta property="image:width" content="240" />
-            <meta property="image:height" content="240" />
-            <meta property="image:alt" content="logo" />
+  <!-- <meta property="og:title" content="Ręcznie robione swetry" /> -->
+
+
+
+
+  <!-- <meta property="title" content="Ręcznie robione swetry" />   -->
+
+  <!-- <meta property="og:image" content="https://ytjymmciwsnouqxdavcc.supabase.co/storage/v1/object/public/kabarday/logo%20_link.png?t=2024-01-23T18%3A41%3A20.812Z"/> -->
+
 </head>
 
 <body>
